{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 39,
  "lineage": "378e2f22-4d06-77cc-25ed-fe63d7b7b2cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:709623555156:loadbalancer/app/mage-elt-development-alb/1b92832054303a76",
            "arn_suffix": "app/mage-elt-development-alb/1b92832054303a76",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mage-elt-development-alb-431365483.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:709623555156:loadbalancer/app/mage-elt-development-alb/1b92832054303a76",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mage-elt-development-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0711eecfbc7690811"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c9d2a8d7afe73ff"
              },
              {
                "subnet_id": "subnet-0713ff16f5b95446f"
              }
            ],
            "subnets": [
              "subnet-04c9d2a8d7afe73ff",
              "subnet-0713ff16f5b95446f"
            ],
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-alb"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-alb"
            },
            "vpc_id": "vpc-03de06f6e371f3db9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:internet-gateway/igw-0d8955e242547ca2f",
            "id": "igw-0d8955e242547ca2f",
            "owner_id": "709623555156",
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-igw"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-igw"
            },
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:709623555156:listener/app/mage-elt-development-alb/1b92832054303a76/383410af8585a564",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:709623555156:targetgroup/mage-elt-development-tg/a0249842b4f0b57b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:709623555156:listener/app/mage-elt-development-alb/1b92832054303a76/383410af8585a564",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:709623555156:loadbalancer/app/mage-elt-development-alb/1b92832054303a76",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:709623555156:targetgroup/mage-elt-development-tg/a0249842b4f0b57b",
            "arn_suffix": "targetgroup/mage-elt-development-tg/a0249842b4f0b57b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:709623555156:targetgroup/mage-elt-development-tg/a0249842b4f0b57b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mage-elt-development-tg",
            "port": 6789,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-lb-tg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8955e242547ca2f",
            "id": "r-rtb-0d81f349c53c2c6051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d81f349c53c2c605",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:route-table/rtb-0d81f349c53c2c605",
            "id": "rtb-0d81f349c53c2c605",
            "owner_id": "709623555156",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8955e242547ca2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-routing-table-public"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d544d45278ef20",
            "route_table_id": "rtb-0d81f349c53c2c605",
            "subnet_id": "subnet-0713ff16f5b95446f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0634e0d119c24fbe8",
            "route_table_id": "rtb-0d81f349c53c2c605",
            "subnet_id": "subnet-04c9d2a8d7afe73ff"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:security-group/sg-0711eecfbc7690811",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0711eecfbc7690811",
            "ingress": [
              {
                "cidr_blocks": [
                  "52.53.249.118/32",
                  "192.92.207.50/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "52.53.249.118/32",
                  "192.92.207.50/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240506181607447800000004",
            "name_prefix": "terraform-",
            "owner_id": "709623555156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mount_target_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:security-group/sg-0367462c27644e480",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0367462c27644e480",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002fac1e584aa4740"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20240506181611412100000006",
            "name_prefix": "terraform-",
            "owner_id": "709623555156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-efs-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_security_group.service_security_group",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:security-group/sg-06858b1120e318444",
            "description": "mage-elt RDS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06858b1120e318444",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002fac1e584aa4740"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mage-elt-development-rds-sg",
            "name_prefix": "",
            "owner_id": "709623555156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-development-rds-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-development-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_security_group.service_security_group",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:security-group/sg-002fac1e584aa4740",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002fac1e584aa4740",
            "ingress": [
              {
                "cidr_blocks": [
                  "52.53.249.118/32"
                ],
                "description": "",
                "from_port": 6789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0711eecfbc7690811"
                ],
                "self": false,
                "to_port": 6789
              }
            ],
            "name": "terraform-20240506181609507400000005",
            "name_prefix": "terraform-",
            "owner_id": "709623555156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-service-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:subnet/subnet-0e1cfa30644866fc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1cfa30644866fc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709623555156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-private-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-private-subnet-1"
            },
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:subnet/subnet-05148d4133348ad4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05148d4133348ad4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709623555156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-private-subnet-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-private-subnet-2"
            },
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:subnet/subnet-0713ff16f5b95446f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.32.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0713ff16f5b95446f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "709623555156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-public-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-public-subnet-1"
            },
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:subnet/subnet-04c9d2a8d7afe73ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.32.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c9d2a8d7afe73ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "709623555156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-public-subnet-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-public-subnet-2"
            },
            "vpc_id": "vpc-03de06f6e371f3db9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:709623555156:vpc/vpc-03de06f6e371f3db9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-0b5af1e49a56cf561",
            "default_route_table_id": "rtb-04a9cc9f6339ddc3c",
            "default_security_group_id": "sg-059e17bdf5cd54947",
            "dhcp_options_id": "dopt-00562080df94216f4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03de06f6e371f3db9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a9cc9f6339ddc3c",
            "owner_id": "709623555156",
            "tags": {
              "Environment": "development",
              "Name": "mage-elt-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mage-elt-vpc"
            }
          }
        }
      ]
    }
  ]
}